# Sandero

./: .gitignore  CMakeLists.txt  README.MD  config.sh  cross-compiler.sh  i686-elf.cmake  iso.sh  qemu-debug.sh  qemu.sh
kernel/: CMakeLists.txt
kernel/.cache/clangd/index/: boot.S.9D371896440A7B3B.idx  crti.S.92060104BD677517.idx  crtn.S.B783FE80A8783CE1.idx  gdt.c.67EFEEDC16A2B8AB.idx  gdt.h.95A5DB297EB8F2B4.idx  kernel.c.AC6EAA56CD240474.idx
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: CMakeLists.txt  boot.S  gdt.c  int80h.S  reloadSegments.S  syscalls.c
kernel/include/kernel/: alloc.h  gdt.h  multibootparser.h  sched.h  syscalls.h
kernel/kernel/: CMakeLists.txt  alloc.c  kernel.c  parse.c  sched.c
libc/: CMakeLists.txt
libc/arch/i386/: CMakeLists.txt  longjmp.S  setjmp.S
libc/include/: setjmp.h
libc/stdlib/: CMakeLists.txt  abort.c
libc/string/: CMakeLists.txt
user/: CMakeLists.txt
user/common/: linker.ld
user/vga_test/: CMakeLists.txt  main.c  vga.c
